[package]
name = "uce"
version = "1.0.0"
authors = ["Wilfried Rabouin"]
edition = "2015"

[features]
default = []
trace = []
nametable-viewer = []
benchmark = []

[dependencies]
minifb = "0.19.1"
log = "0.4.11"
env_logger = "0.8.1"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false
