[package]
name = "mu"
version = "1.0.0"
authors = ["Wilfried Rabouin"]
edition = "2015"

[features]
default = []
trace = []
debugger = []
fullspeed = []

[dependencies]
winit = "0.24.0"
log = "0.4.11"
env_logger = "0.8.2"
wgpu = "0.6.2"
futures = "0.3.8"
cpal = "0.13.1"

[build-dependencies]
shaderc = "0.7.0"
